--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.22.0",
+    "bootstrap": "^5.1.1",
+    "classnames": "^2.3.1",
+    "formik": "^2.2.9",
+    "history": "^5.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-query": "^3.25.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.1",
+    "valtio": "^1.2.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
